--- a/src/pages/mint/MintTab_.module.css
+++ b/src/pages/mint/MintTab_.module.css
@@ -26,8 +26,49 @@
   color: white;
   margin-top: 20px;
 }
+
+.address{
+  color: white;
+}
+
+.text {
+  font-weight: 500;
+  /* font-size: 16px; */
+  font-size: 1.5rem;
+  color: white;
+  margin-top: 10px;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.desc {
+  /* font-weight: 600; */
+  /* font-size: 14px; */
+  font-size: 1.5rem;
+  color: white;
+  margin-top: 16px;
+}
+
+@media (min-width: 0px) {
+  .title {
+    font-size: 2rem;
+  }
+  .text{
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 476px) {
+  .text{
+    font-size: 1.8rem;
+  }
+}
+
 @media (min-width: 576px) {
   .title {
+    font-size: 2rem;
+  }
+  .text{
     font-size: 2rem;
   }
 }
@@ -47,24 +88,4 @@
   .title {
     font-size: 4rem;
   }
-}
-.address{
-  color: white;
-}
-
-.text {
-  font-weight: 500;
-  /* font-size: 16px; */
-  font-size: 1.5rem;
-  color: white;
-  margin-top: 10px;
-  margin-bottom: 16px;
-}
-
-.desc {
-  /* font-weight: 600; */
-  /* font-size: 14px; */
-  font-size: 1.5rem;
-  color: white;
-  margin-top: 16px;
 }
