--- a/src/pages/mint/MintScreen.module.css
+++ b/src/pages/mint/MintScreen.module.css
@@ -6,17 +6,43 @@
   flex-grow: 1;
   flex-shrink: 0;
   position: relative;
-  padding: 3.3vmax 6vw;
+  padding: 3.3vmax 0;
   color: white;
 }
+.sectionBackground {
+  background-color: #dfe0e1;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  pointer-events: none;
+}
 
+.image {
+  width: 100%;
+  height: 100%;
+  object-position: 50% 50%;
+  object-fit: cover;
+}
+
+.bgOverlay {
+  background-color: black;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0.58;
+}
 .card {
   display: flex;
   flex-direction: column;
-  border-radius: 1rem;
+  /* border-radius: 1rem; */
   overflow: hidden;
-  background-color: white;
-  width: 600px;
+  /* background-color: white; */
+  width: 100%;
   height: 600px;
   max-width: 100%;
   /* max-height: 100vw; */
@@ -33,7 +59,7 @@
 
 .tabList {
   padding: 10px 12px 0 12px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  /* border-bottom: 1px solid rgba(0, 0, 0, 0.1); */
 }
 
 .tabNormal {
@@ -47,17 +73,10 @@
   cursor: pointer;
   font-weight: 700;
   font-size: 16px;
-  color: #aeaeae;
+  color: #f8eeee;
 }
 
 .tabSelected {
   border-bottom: 4px solid #0098ee;
-  color: #3a3a3a;
-}
-
-@media (min-width:768px) {
-  .container {
-    padding-left: 3vw;
-    padding-right: 3vw;
-  }
+  color: white;
 }
